--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ resolver = "2"
 
 
 [dependencies]
+bytemuck = { version = "1.7.2", features = ["derive"] }
+glam = { version = "0.17.3", features = ["bytemuck"] }
 ike = { path = "../ike" }
+log = "0.4.14"
 rand = "0.8.4"
 serde = { version = "1.0", features = ["derive"] } 
-toml = "0.5.8" 
+simple_logger = "1.13.0"
+toml = "0.5.8"  
