--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bytemuck = { version = "1.7.2", features = ["derive"] }
 glam = { version = "0.17.3", features = ["bytemuck"] }
 ike = { path = "../ike" }
 log = "0.4.14"
+obj-rs = "0.6.3"
 rand = "0.8.4"
 serde = { version = "1.0", features = ["derive"] } 
 simple_logger = "1.13.0"
