--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ resolver = "2"
 bytemuck = { version = "1.7.2", features = ["derive"] }
 glam = { version = "0.17.3", features = ["bytemuck"] }
 ike = { path = "../ike" }
+kira = "0.5.3"
 log = "0.4.14"
 obj-rs = "0.6.3"
 rand = "0.8.4"
